--- a/EmpresaUTN/EmpresaUTN.WebMVC/Views/Shared/_Layout.cshtml
+++ b/EmpresaUTN/EmpresaUTN.WebMVC/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Paises" asp-action="Index">Paises</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Provincias" asp-action="Index">Provincias</a>
+                        </li>
                     </ul>
                 </div>
             </div>
