--- a/EmpresaUTN/EmpresaUTN.WebMVC/Views/Cantones/Create.cshtml
+++ b/EmpresaUTN/EmpresaUTN.WebMVC/Views/Cantones/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model EmpresaUTN.Modelos.Provincia
+﻿@model EmpresaUTN.Modelos.Canton
 
 @{
     ViewData["Title"] = "Create";
@@ -6,7 +6,7 @@
 
 <h1>Create</h1>
 
-<h4>Provincia</h4>
+<h4>Canton</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -18,25 +18,20 @@
                 <span asp-validation-for="Nombre" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Area" class="control-label"></label>
-                <input asp-for="Area" class="form-control" />
-                <span asp-validation-for="Area" class="text-danger"></span>
+                <label asp-for="CabeceraCantonal" class="control-label"></label>
+                <input asp-for="CabeceraCantonal" class="form-control" />
+                <span asp-validation-for="CabeceraCantonal" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ActividadEconomica" class="control-label"></label>
-                <input asp-for="ActividadEconomica" class="form-control" />
-                <span asp-validation-for="ActividadEconomica" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PaisCodigoPais" class="control-label" />
+                <label asp-for="ProvinciaId" class="control-label"></label>
                 
                 <br />
 
-                <select asp-for="PaisCodigoPais" asp-items="@ViewBag.paises">
+                <select asp-for="ProvinciaId" asp-items="@ViewBag.provincias">
                     <option selected="selected" value="">-- Elija Pais --</option>
                 </select>
 
-                <span asp-validation-for="PaisCodigoPais" class="text-danger"></span>
+                <span asp-validation-for="ProvinciaId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -49,3 +44,6 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
