--- a/EmpresaUTN/EmpresaUTN.WebMVC/Views/Shared/_Layout.cshtml
+++ b/EmpresaUTN/EmpresaUTN.WebMVC/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Provincias" asp-action="Index">Provincias</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Cantones" asp-action="Index">Cantones</a>
+                        </li>
                     </ul>
                 </div>
             </div>
