--- a/BlogPeliculas/BlogPeliculas.WebMVC/Views/Shared/_Layout.cshtml
+++ b/BlogPeliculas/BlogPeliculas.WebMVC/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Peliculas" asp-action="Index">Peliculas</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Comentarios" asp-action="Index">Comentarios</a>
+                        </li>
                     </ul>
                 </div>
             </div>
