--- a/BlogPeliculas/BlogPeliculas.WebMVC/Views/Peliculas/Create.cshtml
+++ b/BlogPeliculas/BlogPeliculas.WebMVC/Views/Peliculas/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model BlogPeliculas.Modelos.Pelicula
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Agregar";
 }
 
-<h1>Create</h1>
+<h1>Agregar</h1>
 
 <h4>Pelicula</h4>
 <hr />
@@ -36,7 +36,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver a la lista de películas</a>
 </div>
 
 @section Scripts {
