--- a/BlogPeliculas/BlogPeliculas.WebMVC/Views/Peliculas/Delete.cshtml
+++ b/BlogPeliculas/BlogPeliculas.WebMVC/Views/Peliculas/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model BlogPeliculas.Modelos.Pelicula
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Eliminar";
 }
 
-<h1>Delete</h1>
+<h1>Eliminar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Esta seguro de elminar esta pelicula?</h3>
 <div>
     <h4>Pelicula</h4>
     <hr />
@@ -39,6 +39,6 @@
     
     <form asp-action="Delete">
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Volver al listado</a>
     </form>
 </div>
