--- a/BlogPeliculas/BlogPeliculas.WebMVC/Views/Comentarios/Create.cshtml
+++ b/BlogPeliculas/BlogPeliculas.WebMVC/Views/Comentarios/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model BlogPeliculas.Modelos.Comentario
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Agregar - comentario";
 }
 
-<h1>Create</h1>
+<h1>Agregar - comentario</h1>
 
 <h4>Comentario</h4>
 <hr />
@@ -42,7 +42,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver al listado</a>
 </div>
 
 @section Scripts {
