--- a/BlogPeliculas/BlogPeliculas.WebMVC/Views/Comentarios/Index.cshtml
+++ b/BlogPeliculas/BlogPeliculas.WebMVC/Views/Comentarios/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<BlogPeliculas.Modelos.Comentario>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Comentarios";
 }
 
-<h1>Index</h1>
+<h1>Comentarios</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Agregar comentario</a>
 </p>
 <table class="table">
     <thead>
@@ -44,9 +44,9 @@
                     @Html.DisplayFor(modelItem => item.Pelicula.Titulo)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new {  id=item.Id }) |
-                    @Html.ActionLink("Details", "Details", new {  id=item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new {  id=item.Id })
+                    @Html.ActionLink("Editar", "Edit", new {  id=item.Id }) |
+                    @Html.ActionLink("Detalles", "Details", new {  id=item.Id }) |
+                    @Html.ActionLink("Eliminar", "Delete", new {  id=item.Id })
                 </td>
             </tr>
         }
