--- a/BlogPeliculas/BlogPeliculas.WebMVC/Views/Peliculas/Edit.cshtml
+++ b/BlogPeliculas/BlogPeliculas.WebMVC/Views/Peliculas/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model BlogPeliculas.Modelos.Pelicula
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edición";
 }
 
-<h1>Edit</h1>
+<h1>Edición</h1>
 
 <h4>Pelicula</h4>
 <hr />
@@ -14,7 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
+                <input asp-for="Id" class="form-control" disabled />
                 <span asp-validation-for="Id" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -40,7 +40,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver a la lista de películas</a>
 </div>
 
 @section Scripts {
