--- a/BlogPeliculas/BlogPeliculas.WebMVC/Views/Personajes/Edit.cshtml
+++ b/BlogPeliculas/BlogPeliculas.WebMVC/Views/Personajes/Edit.cshtml
@@ -1,12 +1,12 @@
-﻿@model BlogPeliculas.Modelos.Comentario
+﻿@model BlogPeliculas.Modelos.Personaje
 
 @{
-    ViewData["Title"] = "Editar";
+    ViewData["Title"] = "Editar personaje";
 }
 
-<h1>Editar</h1>
+<h1>Editar personaje</h1>
 
-<h4>Comentario</h4>
+<h4>Personaje</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -18,14 +18,9 @@
                 <span asp-validation-for="Id" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Contenido" class="control-label"></label>
-                <input asp-for="Contenido" class="form-control" />
-                <span asp-validation-for="Contenido" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Recomendar" /> @Html.DisplayNameFor(model => model.Recomendar)
-                </label>
+                <label asp-for="Nombre" class="control-label"></label>
+                <input asp-for="Nombre" class="form-control" />
+                <span asp-validation-for="Nombre" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PeliculaId" class="control-label"></label>
@@ -46,11 +41,9 @@
 </div>
 
 <div>
-    <a asp-action="Index">Volver al listado</a>
+    <a asp-action="Index">Volver a la lista de personajes</a>
 </div>
 
 @section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
