--- a/BlogPeliculas/BlogPeliculas.WebMVC/Views/Shared/_Layout.cshtml
+++ b/BlogPeliculas/BlogPeliculas.WebMVC/Views/Shared/_Layout.cshtml
@@ -1,9 +1,9 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - BlogPeliculas.WebMVC</title>
+    <title>@ViewData["Title"] - Blog de películas</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/BlogPeliculas.WebMVC.styles.css" asp-append-version="true" />
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">BlogPeliculas.WebMVC</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Blog-Peliculas</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Comentarios" asp-action="Index">Comentarios</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Personajes" asp-action="Index">Personajes</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -44,7 +47,10 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - BlogPeliculas.WebMVC - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2023 - BlogPeliculas.WebMVC
+            - <span>Autor: Perugachi Chávez Luis Armando</span>
+            - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacidad</a>
+
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
