--- a/todonote/app/src/main/res/layout/activity_main.xml
+++ b/todonote/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/addTaskFABtn"
+        android:id="@+id/addTaskFloatBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
